Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -41,11 +41,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "impo"
+    "import pandas as pd"
    ]
   },
   {
@@ -54,7 +54,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = None"
+    "df = read_csv()"
    ]
   },
   {
