Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1492,7 +1492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1657,14 +1657,14 @@
        "max    2.000431e+06      5.000000         5.000000  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.info()\n",
-    "#df.describe()"
+    "df.describe()"
    ]
   },
   {
