Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1742,9 +1742,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.7"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df.star_rating.median()"
    ]
@@ -1761,7 +1772,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df.play_star_rating.count()"
+   ]
   },
   {
    "cell_type": "markdown",
