Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1823,11 +1823,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6049650.0"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df."
+    "df.piece_count.sum()"
    ]
   },
   {
