Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1854,7 +1854,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.piece_count.pe"
+    "df.piece_count.quantile"
    ]
   },
   {
