Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1850,11 +1850,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1077.0"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df.piece_count.quantile"
+    "df.piece_count.quantile(0.9)"
    ]
   },
   {
