Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1884,7 +1884,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df.review_difficulty.un"
+   ]
   },
   {
    "cell_type": "markdown",
