Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1957,7 +1957,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "string_df = .applymap()"
+    "string_df = df.applymap(lambda x: )"
    ]
   },
   {
