Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1957,7 +1957,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "string_df = df.applymap(lambda x: )"
+    "string_df = df.applymap(lambda x: str(x))\n",
+    "string_df.i"
    ]
   },
   {
