--- a/index.ipynb
+++ b/index.ipynb
@@ -1953,7 +1953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1984,8 +1984,7 @@
    ],
    "source": [
     "string_df = df.applymap(lambda x: str(x))\n",
-    "string_df.info()\n",
-    "string"
+    "string_df.info()"
    ]
   },
   {
